objects/Account.object
<CustomObject>
    <fields>
        <fullName>API_DateCreated__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE( CreatedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text( CreatedDate ),9),8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DateCreated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DateDeleted__c</fullName>
        <formula>If(NOT(ISBLANK( DateDeletedhmis__c )),

TEXT(YEAR(DATEVALUE( DateDeletedhmis__c )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(DateDeletedhmis__c))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(DateDeletedhmis__c))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text(DateDeletedhmis__c),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DateDeleted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DateUpdated__c</fullName>
        <formula>If(NOT(ISBLANK( LastModifiedDate )),

TEXT(YEAR(DATEVALUE(LastModifiedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text(LastModifiedDate),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DateUpdated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_VictimServiceProvider__c</fullName>
        <formula>TRIM(LEFT(TEXT( hmisVictimServiceProvider__c),FIND(&quot;:&quot;, TEXT(hmisVictimServiceProvider__c))-1))</formula>
        <label>API_VictimServiceProvider</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateDeletedhmis__c</fullName>
        <label>DateDeleted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hmisExportID__c</fullName>
        <formula>$Setup.hmisExport__c.hmisExportID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Export Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hmisOrganizationCommonName__c</fullName>
        <description>The name by which an organization is commonly known in the community</description>
        <inlineHelpText>The name by which an organization is commonly known in the community</inlineHelpText>
        <label>Organization Common Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hmisOrganizationID__c</fullName>
        <description>A unique identifier that must be automatically generated by the HMIS at the time the organization is created in HMIS.</description>
        <externalId>true</externalId>
        <inlineHelpText>A unique identifier that must be automatically generated by the HMIS at the time the organization is created in HMIS.</inlineHelpText>
        <label>Organization ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>hmisVictimServiceProvider__c</fullName>
        <description>A Victim Service Provider is defined as a private nonprofit organization whose primary mission is to provide services to survivors of domestic violence, dating violence, sexual assault, or stalking. Victim Service Providers include rape crisis centers, battered women&apos;s shelters, domestic violence transitional housing programs, and other programs.</description>
        <inlineHelpText>A Victim Service Provider is defined as a private nonprofit organization whose primary mission is to provide services to survivors of domestic violence, dating violence, sexual assault, or stalking. Victim Service Providers include rape crisis centers, battered women&apos;s shelters, domestic violence transitional housing programs, and other programs.</inlineHelpText>
        <label>Victim Service Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYes</valueSetName>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Organization Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Person_Accounts</fullName>
        <active>true</active>
        <label>Individual Person Account</label>
    </recordTypes>
</CustomObject>